crates/codemark-tui/tests/snapshots/browser_e2e__empty_database_renders_and_focuses_repos_pane.snap
---
source: crates/codemark-tui/tests/browser_e2e.rs
expression: "render_to_string(&layout, 100, 30)"
---
╭──────────────────────────────────────╮╭──Content  Info  Query ───────────────────────────────────╮
│ Search...              [ FTS | Sem ] ││                                                          │
╰──────────────────────────────────────╯│                                                          │
╭──Repos  Owners  Auth ────────────────╮│                                                          │
│                                      ││                                                          │
│                                      ││                                                          │
│                                      ││                                                          │
│                                      ││                                                          │
│                                      ││                                                          │
│                                      ││                                                          │
│                                      ││                                                          │
╰──────────────────────────────────────╯│                                                          │
╭──Tags ───────────────────────────────╮│                                                          │
│  No tags found                       ││                                                          │
│                                      ││                                                          │
│                                      ││                                                          │
│                                      ││                                                          │
│                                      ││                                                          │
╰────────────────────────────── 1 of 1 ╯│                                                          │
╭──Bookmarks  Collections  Tours ──────╮│                                                          │
│                                      ││                                                          │
│                                      ││                                                          │
│                                      │╰──────────────────────────────────────────────────────────╯
│                                      │╭──Details  Comments ──────────────────────────────────────╮
│                                      ││                                                          │
│                                      ││                                                          │
│                                      ││                                                          │
│                                      ││                                                          │
│                                      ││                                                          │
╰──────────────────────────────────────╯╰──────────────────────────────────────────────────────────╯
