crates/codemark-tui/tests/snapshots/browser_e2e__filtering_narrows_the_bookmark_list.snap
---
source: crates/codemark-tui/tests/browser_e2e.rs
expression: "render_to_string(&layout, 100, 30)"
---
╭──────────────────────────────────────╮╭──Content  Info  Query ───────────────────────────────[4]─╮
│ Search...              [ FTS | Sem ] ││ src/main.rs                                              │
╰──────────────────────────────────────╯│   1 fn main() {                                          │
╭──Repos  Owners  Auth ────────────[1]─╮│   2     println!("hi");                                  │
│                                      ││   3 }                                                    │
│                                      ││                                                          │
│                                      ││                                                          │
│                                      ││                                                          │
│                                      ││                                                          │
╰──────────────────────────────────────╯│                                                          │
╭──Tags ───────────────────────────[2]─╮│                                                          │
│  No tags found                       ││                                                          │
│                                      ││                                                          │
│                                      ││                                                          │
│                                      ││                                                          │
│                                      ││                                                          │
╰────────────────────────────── 1 of 1 ╯│                                                          │
╭──Bookmarks    Collections  Tours[3]─╮│                                                          │
│  ● src/config.rs struct Config       ││                                                          │
│                                      ││                                                          │
│                                      ││                                                          │
│                                      ││                                                          │
│                                      │╰──────────────────────────────────────────────────────────╯
│                                      │╭──Details  Comments ──────────────────────────────────[5]─╮
│                                      ││                                                          │
│                                      ││                                                          │
│                                      ││                                                          │
│                                      ││                                                          │
│                                      ││                                                          │
╰────────────────────────────── 1 of 1 ╯╰──────────────────────────────────────────────────────────╯
